--- a/application/templates/add_club.html
+++ b/application/templates/add_club.html
@@ -3,9 +3,12 @@
 {% block content %}
     <body>
         <h1>Add a new club</h1>
+        {% if message %}
+            <h2>{{ message }}</h2>
+        {% endif %}
         <p>
             <div class="form"> 
-                <form methods="POST" actions="">
+                <form method="POST" actions="">
                     {{ form.hidden_tag() }}
 
                     {{ form.club_name.label }} {{ form.club_name }}
