--- a/application/templates/navbar.html
+++ b/application/templates/navbar.html
@@ -19,6 +19,9 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/add_club">Add Boxing Club</a></li>
                 <li><a href="/add_boxer">Add Boxer</a></li>
+                <li><a href="/view_boxer">View Boxers</a></li>
+                <li><a href="/edit_club">Edit Club</a></li>
+                <li><a href="/edit_boxer">Edit Boxer</a></li>
             </ul>
         </div>
     </nav>
